--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,18 @@ services:
       MYSQL_PASSWORD: newpassword
     ports:
       - "3307:3306"
+    volumes:
+      - mysql-data:/var/lib/mysql
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    links:
+      - db
+    ports:
+      - "8081:80"
+    environment:
+      PMA_HOST: db
+      MYSQL_ROOT_PASSWORD: rootpassword
+
 volumes:
   mysql-data:
